--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -2654,6 +2654,7 @@ b e f o r e  a f t e r  b l o c k
             z-index: 17;
         }
         img {
+            width: 100%;
             z-index: 16;
         }
     }
