--- a/resources/assets/stylesheets/less/links.less
+++ b/resources/assets/stylesheets/less/links.less
@@ -4,7 +4,7 @@ a, a:link, a:visited {
     text-decoration: none;
 
     &.index     { color: #444; }
-    &.printhead { color: #339; }    
+    &.printhead { color: #339; }
     &.tree      { color: #000; }
     &.toolbar {
         color: #91a2b6;
@@ -12,7 +12,9 @@ a, a:link, a:visited {
     }
 }
 a[href] {
-    transition: color 0.3s;
+    @media not (prefers-reduced-motion) {
+        transition: color 0.3s;
+    }
 }
 a[disabled] {
     pointer-events: none;
