--- a/resources/assets/stylesheets/less/navigation-hoverborder.less
+++ b/resources/assets/stylesheets/less/navigation-hoverborder.less
@@ -22,9 +22,11 @@
         height: @height;
         margin-top: @margin;
 
-        transition: left @transition-duration,
-                    right @transition-duration,
-                    opacity @transition-duration;
+        @media not (prefers-reduced-motion) {
+            transition: left @transition-duration,
+                        right @transition-duration,
+                        opacity @transition-duration;
+        }
     }
 }
 .border-shrink() {
