--- a/resources/assets/stylesheets/less/variables.less
+++ b/resources/assets/stylesheets/less/variables.less
@@ -31,3 +31,8 @@
 // Drag & Drop specific:
 @drag_and_drop_z_index:    1000;
 @drag_and_drop_border:     1px solid @base-color;
+
+//Avatar sizes:
+@avatar-small:  25px;
+@avatar-medium: 100px;
+@avatar-normal: 250px;
