--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -11,6 +11,7 @@
 @import "scss/actionmenu";
 @import "scss/admin-courses";
 @import "scss/admission";
+@import "scss/avatar";
 @import "scss/blubber";
 @import "scss/contentbar";
 @import "scss/contents";
