TIC 9216 Gültigkeitsdauer von Anmelderegeln

--- a/resources/assets/stylesheets/scss/admission.scss
+++ b/resources/assets/stylesheets/scss/admission.scss
@@ -4,6 +4,14 @@
     margin-left: 25px;
 }
 
+#toggle-date-container {
+    margin-top: 10px;
+
+    img, svg {
+        vertical-align: text-bottom;
+    }
+}
+
 .hover_box {
     div {
         display: inline;
