--- a/resources/assets/stylesheets/scss/resources.scss
+++ b/resources/assets/stylesheets/scss/resources.scss
@@ -452,87 +452,89 @@ form#resolve-request, form#decline-request {
 
 @media all and (min-width: 1600px) {
     form#resolve-request {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        section.splitted-layout {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
 
-        article.assign-dates {
-            div {
-                overflow-x: auto;
-                max-height: 250px;
-            }
-        }
-        article.assign-dates, div[data-dialog-button] {
-            header {
-                margin: 0;
-            }
-
-            table {
-                > tbody:last-of-type {
-                    > tr:last-child {
-                        > td {
-                            border-bottom: none;
-                        }
-                    }
+            article.assign-dates {
+                div {
+                    overflow-x: auto;
+                    max-height: 250px;
                 }
-                &.default {
-                    > thead {
-                        > tr {
-                            > th {
-                                &:first-child {
-                                    z-index: 2;
-                                    background-color: $content-color-20;
-                                    min-width: 180px;
-                                    left: 0;
-                                }
-                                position: sticky;
-                                top: 0;
-                                z-index: 1;
-                                border-top: none;
-                                border-bottom: none !important;
-                                box-shadow: inset 0 1px 0 $brand-color-darker;
-                            }
-                        }
-                    }
-                    > tbody {
-                        > tr {
+            }
+            article.assign-dates, div[data-dialog-button] {
+                header {
+                    margin: 0;
+                }
+
+                table {
+                    > tbody:last-of-type {
+                        > tr:last-child {
                             > td {
-                                &:first-child {
+                                border-bottom: none;
+                            }
+                        }
+                    }
+                    &.default {
+                        > thead {
+                            > tr {
+                                > th {
+                                    &:first-child {
+                                        z-index: 2;
+                                        background-color: $content-color-20;
+                                        min-width: 180px;
+                                        left: 0;
+                                    }
                                     position: sticky;
-                                    left: 0;
+                                    top: 0;
                                     z-index: 1;
-                                    background: $white;
+                                    border-top: none;
+                                    border-bottom: none !important;
+                                    box-shadow: inset 0 1px 0 $brand-color-darker;
+                                }
+                            }
+                        }
+                        > tbody {
+                            > tr {
+                                > td {
+                                    &:first-child {
+                                        position: sticky;
+                                        left: 0;
+                                        z-index: 1;
+                                        background: $white;
+                                    }
                                 }
                             }
                         }
                     }
                 }
+
+                margin: 0;
+                height: 100%;
+                overflow-y: auto;
+                width: 100%;
+                padding: 0;
             }
 
-            margin: 0;
-            height: 100%;
-            overflow-y: auto;
-            width: 100%;
-            padding: 0;
-        }
+            article {
+                &.left-part, &.right-part {
 
-        article {
-            &.left-part, &.right-part {
+                    flex-grow: 1;
+                    margin-bottom: 10px;
+                }
 
-                flex-grow: 1;
-                margin-bottom: 10px;
-            }
+                &.left-part {
+                    width: 50%;
+                }
+                &.right-part {
+                    width: 40%;
+                    padding-left: 1em;
+                }
 
-            &.left-part {
-                width: 50%;
-            }
-            &.right-part {
-                width: 40%;
-                padding-left: 1em;
-            }
-
-            section {
-                padding-top: 0;
+                section {
+                    padding-top: 0;
+                }
             }
         }
     }
