--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -3054,7 +3054,7 @@ d o c u m e n t  b l o c k
             left: 0;
             @include background-icon(arr_1left, clickable, 18);
             &.inactive {
-                @include background-icon(arr_1left, navigation, 18);
+                @include background-icon(arr_1left, inactive, 18);
             }
         }
 
@@ -3062,7 +3062,7 @@ d o c u m e n t  b l o c k
             right: 0;
             @include background-icon(arr_1right, clickable, 18);
             &.inactive {
-                @include background-icon(arr_1right, navigation, 18);
+                @include background-icon(arr_1right, inactive, 18);
             }
         }
 
