--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -2223,6 +2223,7 @@ m a n a g e r
     .cw-manager-element-title {
 
         img {
+            cursor: pointer;
             vertical-align: text-bottom;
         }
 
