rework empty page placeholder for wiki and blubber, fixes #116

--- a/resources/assets/stylesheets/mixins/studip.less
+++ b/resources/assets/stylesheets/mixins/studip.less
@@ -76,7 +76,7 @@
 }
 
 .role2color(@role) when (@role = 'navigation') {
-  @color: 'lightblue';
+  @color: 'blue';
 }
 
 .role2color(@role) when (@role = 'new'), (@role = 'attention'), (@role = 'status-red') {
