--- a/resources/assets/stylesheets/mixins/studip.scss
+++ b/resources/assets/stylesheets/mixins/studip.scss
@@ -72,7 +72,13 @@
     $svg: icon-path($icon, $role);
 
     background-image: url("#{$svg}");
-    background-size: $size;
+
+    @if $size {
+        @if unitless($size) {
+            $size: $size * 1px;
+        }
+        background-size: $size;
+    }
 }
 
 @mixin icon($position, $icon, $role, $size: 16px, $padding: 0) {
