--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -4196,18 +4196,17 @@ vSelect end
         margin: 0;
         list-style: none;
     }
-    button {
-        width: 100%;
-        border: solid thin $content-color-40;
-        background-color: $white;
-        padding: 1em;
-        margin-bottom: 4px;
+    .cw-manager-copy-selector-course {
         color: $base-color;
         cursor: pointer;
-        outline: none;
+        line-height: 2em;
+
         &:hover {
-            color:$white;
-            background-color: $base-color;
+            color: $active-color;
+        }
+
+        img {
+            vertical-align: text-bottom;
         }
     }
 }
