--- a/resources/assets/stylesheets/less/files.less
+++ b/resources/assets/stylesheets/less/files.less
@@ -369,7 +369,8 @@ form.default fieldset.select_terms_of_use {
     margin-right: 0px;
 
     > input[type=radio] {
-        display: none;
+        height: 0px;
+        width: 0px;
     }
     > label {
         cursor: pointer;
