--- a/resources/assets/stylesheets/less/lists.less
+++ b/resources/assets/stylesheets/less/lists.less
@@ -48,6 +48,12 @@ ol {
             content: "";
         }
     }
+
+    &.narrow {
+        > li {
+            display: inline-flex;
+        }
+    }
 }
 .list-pipe-separated {
     .list-inline();
