--- a/resources/assets/stylesheets/less/skiplinks.less
+++ b/resources/assets/stylesheets/less/skiplinks.less
@@ -23,6 +23,13 @@
 
 #skiplink_list {
     display: none;
+    button.skiplink {
+        border: 0;
+        background-color: #fff;
+        color: @base-color;
+        line-height: 1em;
+        margin-bottom: 0.1em;
+    }
 }
 
 body.enable-skiplinks {
