scope CSS to only apply to the gradbook, fixes #471

--- a/resources/assets/stylesheets/less/gradebook.less
+++ b/resources/assets/stylesheets/less/gradebook.less
@@ -1,4 +1,4 @@
-.progress {
+.gradebook-student .progress {
     display: flex;
     height: 20px;
     overflow: hidden;
@@ -7,7 +7,7 @@
     margin: 0.5em 0;
 }
 
-.progress-bar {
+.gradebook-student .progress-bar {
     display: flex;
     flex-direction: column;
     justify-content: center;
