--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -1791,7 +1791,8 @@ d i a l o g
     overflow-x: auto;
     display: flex;
     flex-direction: column;
-    padding: 0.2em;
+    padding: 3px;
+    margin: 3px;
     max-height: 98vh;
 
     .studip-dialog-header,
