--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -2408,6 +2408,16 @@ m a n a g e r
     .progress-bar-wrapper {
         width: 100%;
         border: solid thin $content-color-40;
+
+        .progress-bar {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            color: white;
+            text-align: center;
+            white-space: nowrap;
+            background-color: $base-color;
+        }
     }
 }
 
