--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -119,6 +119,10 @@ c o n t e n t s
     }
 }
 
+.cw-loading-indicator-content {
+    margin-top: 76px;
+}
+
 /* * * * * * * * * * *
 c o n t e n t s  e n d
 * * * * * * * * * * */
