--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -19,6 +19,7 @@
 @import "scss/dates";
 @import "scss/files";
 @import "scss/fullscreen";
+@import "scss/progress_indicator.scss";
 @import "scss/my_courses";
 @import "scss/oer";
 @import "scss/report";
