Resolves "courseware v-select unable to fully display the list"

--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -28,6 +28,7 @@
 @import "scss/tooltip";
 @import "scss/table_of_contents";
 @import "scss/wiki";
+@import "scss/select";
 
 @import "scss/grid";
 
